// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration component 1`] = `
<styled.div
  className="container"
>
  <div
    className="row pages-div"
  >
    <div
      className="col m8 offset-m2 center-align"
    >
      <styled.h1>
         Sign up to receive free motivational quotes to start your day
      </styled.h1>
      <p />
      <form
        onSubmit={[Function]}
      >
        <input
          name="userName"
          onChange={[Function]}
          placeholder="First Name"
          required={true}
          type="text"
          value=""
        />
        <input
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required={true}
          type="text"
          value=""
        />
        <input
          name="phoneNumber"
          onChange={[Function]}
          placeholder="Phone Number"
          required={true}
          type="text"
          value=""
        />
        <input
          className="registration-submit"
          type="submit"
        />
      </form>
    </div>
  </div>
</styled.div>
`;

exports[`Registration component 2`] = `
<styled.div
  className="container"
>
  <div
    className="row pages-div"
  >
    <div
      className="col m8 offset-m2 center-align"
    >
      <styled.h1>
         Sign up to receive free motivational quotes to start your day
      </styled.h1>
      <p />
      <form
        onSubmit={[Function]}
      >
        <input
          name="userName"
          onChange={[Function]}
          placeholder="First Name"
          required={true}
          type="text"
          value="itoodud"
        />
        <input
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required={true}
          type="text"
          value="djdsj@mail.com"
        />
        <input
          name="phoneNumber"
          onChange={[Function]}
          placeholder="Phone Number"
          required={true}
          type="text"
          value="9999999999"
        />
        <input
          className="registration-submit"
          type="submit"
        />
      </form>
    </div>
  </div>
</styled.div>
`;
